--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./style.css" rel="stylesheet"/>
+    <link href="./style.css" rel="stylesheet" />
     <title>Rock, Paper, Scissors</title>
 </head>
 
 <body>
     <div id="game-container" class="game-container">
-    <div class="button-div">
-        <p>Div</p>
-        <div id="rock" class="rock">Rock</div>
-        <button id="paper" class="paper">Paper</button>
-        <button id="scissors" class="scissors">Scissors</button>
-    </div>
-    </div>
-    <!-- <h1>Hello</h1> -->
-    <script src="./script.js"></script>
 
+        <div id="gameplay" class="gameplay">
+            <h2>Game Play</h2>
+        </div>
+
+        <div class="button-div">
+            <button id="rock" class="rock">Rock</button>
+            <button id="paper" class="paper">Paper</button>
+            <button id="scissors" class="scissors">Scissors</button>
+        </div>
+
+        <div id="scoreboard" class="scoreboard">
+            <h2>Scoreboard</h2>
+        </div>
+
+    </div>
+    <script src="./script.js"></script>
 </body>
-</html>  
+
+</html>
