--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
 
         <div class="button-div">
-            <button id="rock" class="rock">Rock</button>
-            <button id="paper" class="paper">Paper</button>
-            <button id="scissors" class="scissors">Scissors</button>
+            <button id="rock" class="rock" value="rock">Rock</button>
+            <button id="paper" class="paper" value="paper">Paper</button>
+            <button id="scissors" class="scissors" value="scissors">Scissors</button>
         </div>
 
         <div id="scoreboard" class="scoreboard">
